--- a/Scholarship2.html
+++ b/Scholarship2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Scholarship</title>
+    <title>Scholarship 2</title>
     <meta charset="UTF-50">
     <meta name="viewport" content="initial-scale=1.0">
     <script src="modernizr.custom.65897.js"></script>
 </head>
 <body>
-<h2 style="text-align: center">Scholarship Form</h2>
+<h2 style="text-align: center">Scholarship Form 2</h2>
 <form name="scholarship" action="ProcessScholarship2.php" method="post">
     <p>First Name: <input type="text" name="fName"></p>
     <p>Last Name: <input type="text" name="lName"></p>
