--- a/Project_02_04_02/Paycheck.html
+++ b/Project_02_04_02/Paycheck.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 <h2 style="text-align: center">Paycheck</h2>
-<form style="text-align: center" name="scholarship" action="Paycheck.php" method="post">
-    <p>Number of Hours: <input type="number" name="hours"</p>
-    <p>Hourly Wage: <input type=number name="wage"</p>
+<form style="text-align: center" name="paycheck" action="Paycheck.php" method="post">
+    <p>Number of Hours: <input type="text" name="hours"</p>
+    <p>Hourly Wage: <input type="text" name="wage"</p>
     <p>
         <input type="reset" value="Reset">&nbsp;&nbsp;
         <input type="submit" value="Send Form">
